# configurable_discord_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  setup.cfg
.github/workflows/: main.yml
bot/: __init__.py  client.py  config.py  minesweeper.py  minesweeper_view.py  reputation.py  runner.py
config/: test_config.json
