[metadata]
name = bot
version = attr: bot.__version__
description = Configurable Discord Bot
long_description = file: README.md
long_description_content_type = text/markdown
keywords = discord, bot
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    discord.py
    requests
    python-dotenv
    supabase

[options.entry_points]
console_scripts = 
    bot_runner = bot.runner:main

[options.extras_require]
dev = 
    autopep8

[options.package_data]
* = README.md